k8s-specifications/portfolio-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: portfolio-v1
  name: portfolio-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portfolio-v1
  template:
    metadata:
      labels:
        app: portfolio-v1
    spec:
      containers:
      - image: dockersamples/examplevotingapp_vote
        name: portfolio-v1
        ports:
        - containerPort: 80
          name: portfolio-v1
