k8s-specifications/portfolio-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: portfiolio-v1
  name: portfolio-v1
spec:
  type: NodePort
  ports:
  - name: "portfolio-v1-service"
    port: 6000
    targetPort: 6000
    nodePort: 31003
  selector:
    app: portfolio-v1
